# sp_task

./: README.md  cData.py  createDataSetFolder.py  sp_project.py  tab3.csv  tab4.csv
item0/: README.md  cData.py  sp_project.py  table.csv
item1/: ConvNetF.py  ImageTest.py  README.md  other3.csv  presentation.ipynb  sp_project.py
item1/dataset/: jeans.csv  other.csv  otherplus.csv  sofa.csv  tshirt.csv  tv.csv
item2/: Dockerfile  README.md  pyproject.toml  requirements.txt  web.py
item2+item3/: Dockerfile  README.md  pyproject.toml  web.py
item2+item3/templates/: index.html
