[tool.poetry]
name = "dock"
version = "0.1.0"
description = ""
authors = ["VladTsvelenev <89857655422@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
numpy = "^1.26.4"
torch = "^2.2.1"
torchvision = "^0.17.1"
gunicorn = "^21.2.0"
captum = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
